# ncau-mlops-datapl-genai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  env.yaml  pyproject.toml  setup.cfg
.github/variables/: project_vars.env
.github/workflows/: compile_and_upload_vertex_pipeline.yml  configure_alerting.yml  docker_build.yml  label_model.yml  lint_test.yml  nprod_workflow.yml  prod_workflow.yml  run_training.yml
infra/environments/nprod/: backend.tf  logging.tf  nprod.tfvars  variables.tf  version.tf
infra/environments/prod/: backend.tf  main.tf  prod.tfvars  variables.tf
infra/modules/artifact_registry/: main.tf  variables.tf
infra/modules/cloud_storage/: main.tf  variables.tf
infra/modules/cm_notification_channel/: main.tf  variables.tf
infra/modules/iam_member/: main.tf  variables.tf
notebooks/: evidently_metric_presets.ipynb  experiment_tracking_template.ipynb  exploratory_data_analysis_template.ipynb  invoke_src_code.ipynb  submit_pipeline.ipynb
src/xgb_churn_prediction/: util.py
src/xgb_churn_prediction/data/: data_clean.py  data_ingestion.py  data_output.py  data_split.py
src/xgb_churn_prediction/inference/: app.gunicorn.conf.py  app.py  entrypoint.sh
src/xgb_churn_prediction/model/: evaluate.py  features.py  predict.py  train.py  (+1 more)
tests/resources/: test-resource.csv
tests/unit/: conftest.py  util.py
vertex_components/: util.py
vertex_components/data/: data.py  util.py
vertex_components/model/: evaluate.py  predict.py  train.py  upload_deploy.py
vertex_components/monitoring/: feature_drift.py  inference_history_table.py  performance_monitoring.py  prediction_drift.py
vertex_pipelines/: alerting.py  compile_pipeline.py  label_model.py  pipeline_defs.py  run_all_training.py
vertex_pipelines/custom/: inference_pipeline.py  training_pipeline.py
vertex_pipelines/monitoring/: performance_monitoring_pipeline.py
(+18 files in other folders)
